--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="(https://fonts.google.com/specimen/Outfit)" />
   </head>
   <body>
-    <div class="container">
+    <div class="flex container">
       <div class="flex qr--container">
         <div class="qr--holder">
           <img src="image-qr-code.png" alt="" />
